correct spacing for p

--- a/css/master.css
+++ b/css/master.css
@@ -114,7 +114,7 @@ img.logoImg:hover {
  ██████  ██████  ███████  ██████  ██      ██ ██   ████ ███████
 */
 .card .extendedInfo p {
-	margin: 1em 0;
+	margin: 0 0 1em;
 }
 @media only screen and (min-width: 601px) and (max-width:992px) {
 	.collapsible-body.section.row {
